refactor: remove coveralls integration because we are using codecov now

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: true
 jdk:
   - openjdk8
 language: java
-script: ./mvnw verify coveralls:report -B
+script: ./mvnw verify -B
 sudo: true
 services:
   - docker
