--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-    Copyright 2019 Ingo Griebsch
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
-    Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS"
-    BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.4.1</version>
+        <!-- lookup parent from repository -->
+        <relativePath />
     </parent>
 
-    <groupId>com.github.ingogriebsch.samples</groupId>
+    <groupId>de.ingogriebsch.samples</groupId>
     <artifactId>sample-spring-data-jpa-testcontainers-utilization</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -28,8 +19,10 @@
     <description>This sample shows you how to utilize the Testcontainers usage with Spring Data JPA (and Spring Boot)</description>
     <url>https://github.com/ingogriebsch/sample-spring-data-jpa-testcontainers-utilization</url>
     <inceptionYear>2018</inceptionYear>
-    <organization />
-
+    <organization>
+        <name>Ingo Griebsch</name>
+        <url>https://ingogriebsch.de</url>
+    </organization>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -38,153 +31,231 @@
         </license>
     </licenses>
 
-    <scm>
-        <url>${project.url}</url>
-    </scm>
-    
     <developers>
         <developer>
             <id>ingogriebsch</id>
             <name>Ingo Griebsch</name>
-            <email>ingogriebsch@gmx.de</email>
+            <email>ingo.griebsch@gmx.de</email>
             <url>https://ingogriebsch.de</url>
             <timezone>Europe/Berlin</timezone>
         </developer>
     </developers>
 
-	<issueManagement>
-	    <url>${project.url}/issues</url>
-	    <system>GitHub</system>
-	</issueManagement>    
+    <scm>
+        <connection>scm:git:git://github.com/ingogriebsch/sample-spring-data-jpa-testcontainers-utilization.git</connection>
+        <developerConnection>scm:git:git://github.com/ingogriebsch/sample-spring-data-jpa-testcontainers-utilization.git</developerConnection>
+        <url>https://github.com/ingogriebsch/sample-spring-data-jpa-testcontainers-utilization.git</url>
+    </scm>
+    <issueManagement>
+        <url>https://github.com/ingogriebsch/sample-spring-data-jpa-testcontainers-utilization/issues</url>
+        <system>GitHub</system>
+    </issueManagement>
   
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.dependency.testcontainers.version>1.9.1</project.dependency.testcontainers.version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>21.0</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>net.ttddyy</groupId>
             <artifactId>datasource-proxy</artifactId>
-            <version>1.4.6</version>
+            <version>1.7</version>
         </dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>jdbc</artifactId>
-			<version>${project.dependency.testcontainers.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-			<version>${project.dependency.testcontainers.version}</version>
+            <version>1.15.1</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-			<version>${project.dependency.testcontainers.version}</version>
-            <scope>test</scope>
-        </dependency>
-	</dependencies>
+     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.coderplus.maven.plugins</groupId>
+                    <artifactId>copy-rename-maven-plugin</artifactId>
+                    <version>1.0.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.ruleoftech</groupId>
+                    <artifactId>markdown-page-generator-plugin</artifactId>
+                    <version>2.3.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.revelc.code</groupId>
+                    <artifactId>impsort-maven-plugin</artifactId>
+                    <version>1.4.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.revelc.code.formatter</groupId>
+                    <artifactId>formatter-maven-plugin</artifactId>
+                    <version>2.13.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>2.0.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>tidy-maven-plugin</artifactId>
+                    <version>1.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.6</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
-            <plugin>
-                <!-- https://github.com/walokra/markdown-page-generator-plugin -->
-                <groupId>com.ruleoftech</groupId>
-                <artifactId>markdown-page-generator-plugin</artifactId>
-                <version>2.1.0</version>
+            <plugin><!-- https://code.revelc.net/formatter-maven-plugin -->
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <configuration>
+                    <configFile>/etc/ide/eclipse.java-formatter.xml</configFile>
+                </configuration>
                 <executions>
                     <execution>
-                        <phase>process-resources</phase>
+                        <id>default-validate</id>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>validate</goal>
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin><!-- https://www.eclemma.org/jacoco/trunk/doc/maven.html -->
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin><!-- https://code.revelc.net/impsort-maven-plugin -->
+                <groupId>net.revelc.code</groupId>
+                <artifactId>impsort-maven-plugin</artifactId>
+                <configuration>
+                    <staticGroups>java.,javax.,*</staticGroups>
+                    <groups>java.,javax.,*</groups>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin><!-- https://github.com/walokra/markdown-page-generator-plugin -->
+                <groupId>com.ruleoftech</groupId>
+                <artifactId>markdown-page-generator-plugin</artifactId>
                 <configuration>
                     <inputDirectory>${project.basedir}</inputDirectory>
                     <outputDirectory>${project.build.directory}/html</outputDirectory>
                 </configuration>
-            </plugin>
-            <plugin>
-                <!-- https://coderplus.github.io/copy-rename-maven-plugin -->
-                <groupId>com.coderplus.maven.plugins</groupId>
-                <artifactId>copy-rename-maven-plugin</artifactId>
-                <version>1.0</version>
                 <executions>
                     <execution>
-                        <phase>prepare-package</phase>
+                        <id>generate-readme</id>
                         <goals>
-                            <goal>copy</goal>
+                            <goal>generate</goal>
                         </goals>
+                        <phase>process-resources</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin><!-- https://coderplus.github.io/copy-rename-maven-plugin -->
+                <groupId>com.coderplus.maven.plugins</groupId>
+                <artifactId>copy-rename-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>rename-readme</id>
                         <configuration>
                             <sourceFile>${project.build.directory}/html/README.html</sourceFile>
                             <destinationFile>${project.build.outputDirectory}/static/index.html</destinationFile>
                         </configuration>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <phase>process-resources</phase>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <!-- https://docs.spring.io/spring-boot/docs/1.15.10.RELEASE/maven-plugin -->
+            <plugin><!-- https://docs.spring.io/spring-boot/docs/2.2.4.RELEASE/maven-plugin -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin><!-- http://www.mojohaus.org/tidy-maven-plugin/ -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tidy-maven-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>default-check</id>
                         <goals>
-                            <goal>build-info</goal>
+                            <goal>check</goal>
                         </goals>
-                        <configuration>
-                            <additionalProperties>
-                                <source.encoding>${project.build.sourceEncoding}</source.encoding>
-                                <java.source>${maven.compiler.source}</java.source>
-                                <java.target>${maven.compiler.target}</java.target>
-                            </additionalProperties>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -192,38 +263,56 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>travis</id>
+        <profile><!-- https://stackoverflow.com/questions/7905501/get-rid-of-pom-not-found-warning-for-org-eclipse-m2elifecycle-mapping -->
+            <id>eclipse</id>
             <activation>
                 <property>
-                    <name>env.TRAVIS</name>
-                    <value>true</value>
+                    <name>m2e.version</name>
                 </property>
             </activation>
             <build>
-                <plugins>
-                    <plugin>
-                        <!-- https://www.eclemma.org/jacoco/trunk/doc/maven.html -->
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.2</version>
-                        <executions>
-                            <execution>
-                                <id>default-prepare-agent</id>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>default-report</id>
-                                <goals>
-                                    <goal>report</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>    
+                <pluginManagement>
+                    <plugins>
+                        <plugin><!-- https://www.eclipse.org/m2e/ -->
+                            <groupId>org.eclipse.m2e</groupId>
+                            <artifactId>lifecycle-mapping</artifactId>
+                            <version>1.0.0</version>
+                            <configuration>
+                                <lifecycleMappingMetadata>
+                                    <pluginExecutions>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>com.ruleoftech</groupId>
+                                                <artifactId>markdown-page-generator-plugin</artifactId>
+                                                <versionRange>[1.0.0,)</versionRange>
+                                                <goals>
+                                                    <goal>generate</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <execute />
+                                            </action>
+                                        </pluginExecution>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>com.coderplus.maven.plugins</groupId>
+                                                <artifactId>copy-rename-maven-plugin</artifactId>
+                                                <versionRange>[1.0.0,)</versionRange>
+                                                <goals>
+                                                    <goal>copy</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <execute />
+                                            </action>
+                                        </pluginExecution>
+                                    </pluginExecutions>
+                                </lifecycleMappingMetadata>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
         </profile>
     </profiles>
 </project>
