refactor: rework code base to be conform with the used dependencies

--- a/src/test/resources/testcontainers.properties
+++ b/src/test/resources/testcontainers.properties
@@ -1,1 +1,1 @@
-# properties to utilize Testcontainers before the tests are triggered.
+# properties to utilize Testcontainers to tweak the initialization of the underlying containers.
