--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,3 +1,3 @@
 spring:
   datasource:
-    url: jdbc:tc:postgresql:12://somehost:someport/somedb?TC_INITSCRIPT=testcontainers.sql
+    url: jdbc:tc:postgresql:12://somehost:someport/somedb
