--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,6 @@
-# For more information see: https://docs.github.com/en/github/administering-a-repository/keeping-your-dependencies-updated-automatically
+# For more information see: 
+# https://docs.github.com/en/github/administering-a-repository/keeping-your-dependencies-updated-automatically
+# https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates
 version: 2
 updates:
   # Maintain dependencies for Maven
