--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
     directory: "/"
     open-pull-requests-limit: 10
     schedule:
-      interval: daily
+      interval: weekly
       time: '01:00'
   
   # Maintain dependencies for GitHub Actions
@@ -16,5 +16,5 @@ updates:
     directory: "/"
     open-pull-requests-limit: 10
     schedule:
-      interval: daily
+      interval: weekly
       time: '01:00'
