--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: 'adopt'
+          check-latest: true
 
       - name: Prepare Maven cache
         uses: actions/cache@v2.1.4
